--- a/GreenGardenClient/GreenGardenClient/GreenGardenClient.csproj
+++ b/GreenGardenClient/GreenGardenClient/GreenGardenClient.csproj
@@ -191,6 +191,7 @@
     <None Include="wwwroot\scss\_site-blocks.scss" />
     <None Include="wwwroot\scss\_site-navbar.scss" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.35" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.35">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
