--- a/GreenGardenClient/GreenGardenClient/GreenGardenClient.csproj
+++ b/GreenGardenClient/GreenGardenClient/GreenGardenClient.csproj
@@ -202,6 +202,8 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.36.0" />
 
 		  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+
+		  <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
   </ItemGroup>
 
   <ItemGroup>
